# mirror

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: config.json  config.rs  main.rs  utils.rs
src/mirrors/: aliyun.json
