[package]
name = "mirror"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
futures-util = "0.3.28"
humansize = "2.1.3"
indicatif = "0.17.5"
reqwest = { version = "0.11", features = ["blocking", "json", "stream", "rustls-tls"], default-features = false }
tempfile = "3.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
new_string_template = "1.4.0"
